# ditty

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bismuth-deploy.yaml
docs/: torch_fx_guide.md
lib/: data.py  pipeline.py  trainer.py
lib/ditty/: __init__.py  base.py  checkpoint.py  config.py  contract.py  data.py  example.py  hf_utils.py  loss.py  metrics_logger.py  model_factory.py  pipeline.py  processors.py  trainer.py  utils.py
lib/ditty/diffusion/: __init__.py  noise_schedule.py
lib/ditty/gradient_free/: __init__.py
lib/ditty/gradient_free/propop/: __init__.py  config.py  state.py  trainer.py  wrapper.py
optimizers/: __init__.py  igod.py
plans/: FSDP_NOTES.md  pipeline_print_method.md
